load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_binary(
    name = "app_demo",
    srcs = ["demo/main.cpp"],
    copts = ['-std=c++17', '-Ofast', '-fconcepts', '-Wfatal-errors', '-Wno-class-memaccess'],
    deps = [
        "//libs/nlohmann:json_lib", 
        "//src/vastjson:vastjson_lib"]
)
